--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/assets/css/style.css" rel="stylesheet"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <title>Duelfer Solutions, L.L.C.</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Duelfer Solutions</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
+        <header class="masthead bg-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6" style="text-align:right;">
+                        <h1 class="mb-1">Complex problems</h1>
+                        <h3 class="mb-3">simple solutions.</h3>
+                        <a class="btn btn-dark" href="mailto:jon@duelfersolutions.com">Email me</a>
+                    </div>
+                    <div class="col-lg-6 text-center">
+                        <img src="/assets/img/little-things-me.png" height="250px"/>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <section class="content-section-after-skew bg-white">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-lg-4 col-sm-6">
+                        <img src="/assets/img/pebble-people.png" height="150px"/>
+                    </div>
+                    <div class="col-lg-8 mx-auto col-sm-6">
+                        <h2>Pleased to meet you.</h2>
+                        <p class="lead mb-3">With almost 10 years in the software sector, from private aviation, to fin-tech to the energy section, I can provide the expertise you are looking for.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="content-section bg-light">
+            <div class="container">
+                <div class="row pt-5">
+                    <div class="col-lg-4">
+                        <div class="text-center">
+                            <img height="150px" src="/assets/img/humans-graph.png" alt="Salesforce">
+                            <h3 class="pt-1">Salesforce</h3>
+                        </div>
+                        <div class="service-text px-3">
+                            <p>With +7 years of experience, from building Salesforce Orgs from the bottom up to dev teams of over 20 people, I have worked on all sizes of Salesforce environments. Need a hand with your Salesforce?</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="text-center">
+                            <img height="150px" src="/assets/img/pebble-people-ui.png" alt="Salesforce">
+                            <h3 class="pt-1">Web</h3>
+                        </div>
+                        <p>What software developer doesn't hate and love the web at the same time? From custom static blogs running on <a href="https://jekyllrb.com/">Jekyll</a> to full-fledge <a href="https://reactjs.org/">React</a> apps, I'm here to lend a hand.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="text-center">
+                            <img height="150px" src="/assets/img/humans-ux.png" alt="Salesforce">
+                            <h3 class="pt-1">Full-stack</h3>
+                        </div>
+                        <p>From Financial Management systems to IoT ingestion, from Java, Python, JavaScript, Clojure, I love to get my hands deep into the backend systems of any business. Need a helping hand for your existing infrastructure?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="content-section bg-white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6" style="text-align: right;">
+                        <h1>Still not convinced?</h1>
+                        <h4>this is taking some work.</h4>
+                    </div>
+                    <div class="col-lg-6 text-center">
+                        <img src="/assets/img/coffee-bar.png" style="margin-top: -2rem;" height="135px"/>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <img class="card-img-top" src="/assets/img/the-commons-app.png" alt="The Commons App">
+                            <div class="card-body">
+                                <h5 class="card-title">The Commons App</h5>
+                                <p class="card-text">This application allows users to login, rate, review, and discuss articles from magazines that they subscribe to.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <img class="card-img-top" src="/assets/img/inquiring-reader.png" alt="The Commons App">
+                            <div class="card-body">
+                                <h5 class="card-title">Inquiring Reader</h5>
+                                <p class="card-text">This static blog is optimized for SEO and recieves ~2,000 visits per month.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <img class="card-img-top" src="/assets/img/sfdx-developer.png" alt="The Commons App">
+                            <div class="card-body">
+                                <h5 class="card-title">SFDX Developer</h5>
+                                <p class="card-text">This website showcases my knowledge of Salesforce.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="content-section bg-dark" style="color: white;">
+            <div class="container">
+                <div class="row">
+                    <p>&#169; 2021 Duelfer Solutions, L.L.C. All Rights Reserved.</p>
+                </div>
+            </div>
+        </section>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    </body>
+</html>
