better language, icon, favicon, and links

--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="/assets/css/style.css" rel="stylesheet"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
         <title>Duelfer Solutions, L.L.C.</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Duelfer Solutions</a>
+              <a class="navbar-brand" href="#">
+                <img src="/assets/img/logo.png" alt="" height="35">
+              </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -42,8 +61,8 @@
                         <img src="/assets/img/pebble-people.png" height="150px"/>
                     </div>
                     <div class="col-lg-8 mx-auto col-sm-6">
-                        <h2>Pleased to meet you.</h2>
-                        <p class="lead mb-3">With almost 10 years in the software sector, from private aviation, to fin-tech to the energy section, I can provide the expertise you are looking for.</p>
+                        <h2>Expertise you can count on.</h2>
+                        <p class="lead mb-3">With almost 10 years in the software industry, from private aviation, to fin-tech, to the energy sector and more, I can provide the expertise you are looking for.</p>
                     </div>
                 </div>
             </div>
@@ -57,7 +76,7 @@
                             <h3 class="pt-1">Salesforce</h3>
                         </div>
                         <div class="service-text px-3">
-                            <p>With +7 years of experience, from building Salesforce Orgs from the bottom up to dev teams of over 20 people, I have worked on all sizes of Salesforce environments. Need a hand with your Salesforce?</p>
+                            <p>With 7+ years of experience, from building Salesforce Orgs from the bottom up to working in dev teams of over 20 people, I have worked on all types and sizes of Salesforce environments. I'm here to develop independent tools, integrate seamlessly with your dev team, or providing consulting expertise.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -65,14 +84,18 @@
                             <img height="150px" src="/assets/img/pebble-people-ui.png" alt="Salesforce">
                             <h3 class="pt-1">Web</h3>
                         </div>
-                        <p>What software developer doesn't hate and love the web at the same time? From custom static blogs running on <a href="https://jekyllrb.com/">Jekyll</a> to full-fledge <a href="https://reactjs.org/">React</a> apps, I'm here to lend a hand.</p>
+                        <div class="service-text px-3">
+                            <p>Need to expose your business data to your customers or partners in a safe, secure, and user-friendly manner? From static blogs running on Jekyll, to full-fledge Javascript apps (React, Vue, Knockout...), to Salesforce Communities that integrate seamlessly with your database, I'm here to lend a hand.
+                        </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="text-center">
                             <img height="150px" src="/assets/img/humans-ux.png" alt="Salesforce">
                             <h3 class="pt-1">Full-stack</h3>
                         </div>
-                        <p>From Financial Management systems to IoT ingestion, from Java, Python, JavaScript, Clojure, I love to get my hands deep into the backend systems of any business. Need a helping hand for your existing infrastructure?</p>
+                        <div class="service-text px-3">
+                            <p>From Financial Management, Flight Scheduling, and IoT to a list of other software systems in Java, Python, JavaScript, and Clojure, I am comfortable working across different stacks and cloud providers. My experience with a range of tecnologies ensures you get the most optimized solution.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -82,7 +105,7 @@
                 <div class="row">
                     <div class="col-lg-6" style="text-align: right;">
                         <h1>Still not convinced?</h1>
-                        <h4>this is taking some work.</h4>
+                        <h4>check out my public projects.</h4>
                     </div>
                     <div class="col-lg-6 text-center">
                         <img src="/assets/img/coffee-bar.png" style="margin-top: -2rem;" height="135px"/>
@@ -93,17 +116,8 @@
                         <div class="card">
                             <img class="card-img-top" src="/assets/img/the-commons-app.png" alt="The Commons App">
                             <div class="card-body">
-                                <h5 class="card-title">The Commons App</h5>
-                                <p class="card-text">This application allows users to login, rate, review, and discuss articles from magazines that they subscribe to.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="card">
-                            <img class="card-img-top" src="/assets/img/inquiring-reader.png" alt="The Commons App">
-                            <div class="card-body">
-                                <h5 class="card-title">Inquiring Reader</h5>
-                                <p class="card-text">This static blog is optimized for SEO and recieves ~2,000 visits per month.</p>
+                                <h5 class="card-title"><a href="https://www.thecommonsapp.com" target="_blank">The Commons App</a></h5>
+                                <p class="card-text">Built in React with a Node backend, this SPA allows users to review and discuss articles from newspapers and magazines they love.</p>
                             </div>
                         </div>
                     </div>
@@ -111,18 +125,32 @@
                         <div class="card">
                             <img class="card-img-top" src="/assets/img/sfdx-developer.png" alt="The Commons App">
                             <div class="card-body">
-                                <h5 class="card-title">SFDX Developer</h5>
-                                <p class="card-text">This website showcases my knowledge of Salesforce.</p>
+                                <h5 class="card-title"><a href="http://sfdxdeveloper.com" target="_blank">SFDX Developer</a></h5>
+                                <p class="card-text">Blog that lists tutorials and best practices for working with Salesforce, primarly with SFDX and other cutting-edge tools.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <img class="card-img-top" src="/assets/img/inquiring-reader.png" alt="The Commons App">
+                            <div class="card-body">
+                                <h5 class="card-title"><a href="https://inquiringreader.org" target="_blank">The Inquiring Reader</a></h5>
+                                <p class="card-text">Static blog that is highly optimized for SEO and recieves ~2,000 visits per month, a worthy visit count for a book-based website.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="content-section bg-dark" style="color: white;">
+        <section class="footer bg-dark" style="color: white;">
             <div class="container">
                 <div class="row">
-                    <p>&#169; 2021 Duelfer Solutions, L.L.C. All Rights Reserved.</p>
+                    <div class="col-lg-6 col-md-12">
+                        <p>&#169; 2021 Duelfer Solutions, L.L.C. All Rights Reserved.</p>
+                    </div>
+                    <div class="col-lg-6 col-md-12 footer-email">
+                        <p>jon@duelfersolutions.com</p>
+                    </div>
                 </div>
             </div>
         </section>
