Updated the second section to be more of an About section and added some company values and mission statement in this section.

--- a/index.html
+++ b/index.html
@@ -54,88 +54,86 @@
                 </div>
             </div>
         </header>
-        <section class="content-section-after-skew bg-white">
+        <section id="about-us" class="content-section-after-skew bg-white">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-lg-4 col-sm-6">
                         <img src="/assets/img/pebble-people.png" height="150px"/>
                     </div>
                     <div class="col-lg-8 mx-auto col-sm-6">
-                        <h2>Expertise you can count on.</h2>
-                        <p class="lead mb-3">With almost 10 years in the software industry, from private aviation, to fin-tech, to the energy sector and more, I can provide the expertise you are looking for.</p>
+                        <h2>Agilility. Integrity. Excellence.</h2>
+                        <p class="lead mb-3">With over 10 years of experience in the Salesforce ecosystem, our mission is to be a trusted partner on our clients’ journey to Salesforce success. Our team of experts brings a level of excellence that you can trust.</p> 
+                        <p class="lead mb-3">We’re committed to delivering top-quality services, innovative solutions, and exceptional customer satisfaction. We'll work collaboratively with you, utilizing agile methodologies to adapt quickly to your evolving business needs and provide flexible solutions tailored to your unique requirements.</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="content-section bg-light">
+        <section id="services" class="content-section bg-light">
             <div class="container">
                 <div class="row pt-5">
                     <div class="col-lg-4">
                         <div class="text-center">
                             <img height="150px" src="/assets/img/humans-graph.png" alt="Salesforce">
-                            <h3 class="pt-1">Salesforce</h3>
+                            <h3 class="pt-1">Mulit-cloud Salesforce Implementations</h3>
                         </div>
                         <div class="service-text px-3">
-                            <p>With 7+ years of experience, from building Salesforce Orgs from the bottom up to working in dev teams of over 20 people, I have worked on all types and sizes of Salesforce environments. I'm here to develop independent tools, integrate seamlessly with your dev team, or providing consulting expertise.</p>
+                            <p>We have successfully worked with a wide range of clouds, including Sales Cloud, Service Cloud, Net Zero Cloud, NPSP (Nonprofit Success Pack), and Marketing Cloud. Our experience spans across these clouds, enabling us to deliver comprehensive solutions that address your sales, service, sustainability, nonprofit, and marketing needs.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="text-center">
+                        <div class="text-center" style="padding-bottom: 2rem;">
                             <img height="150px" src="/assets/img/pebble-people-ui.png" alt="Salesforce">
-                            <h3 class="pt-1">Web</h3>
+                            <h3 class="pt-1">Source-driven Solutions</h3>
                         </div>
                         <div class="service-text px-3">
-                            <p>Need to expose your business data to your customers or partners in a safe, secure, and user-friendly manner? From static blogs running on Jekyll, to full-fledge Javascript apps (React, Vue, Knockout...), to Salesforce Communities that integrate seamlessly with your database, I'm here to lend a hand.
+                            <p>With our source-driven approach, you can have peace of mind knowing that your Salesforce org is protected, and changes can be implemented smoothly while maintaining the highest level of data integrity and governance. Our experienced team utilizes version control systems and best practices to maintain a comprehensive history of changes, allowing for efficient collaboration, seamless code management, and streamlined deployments.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="text-center">
                             <img height="150px" src="/assets/img/humans-ux.png" alt="Salesforce">
-                            <h3 class="pt-1">Full-stack</h3>
+                            <h3 class="pt-1">Customized Platform Integrations</h3>
                         </div>
                         <div class="service-text px-3">
-                            <p>From Financial Management, Flight Scheduling, and IoT to a list of other software systems in Java, Python, JavaScript, and Clojure, I am comfortable working across different stacks and cloud providers. My experience with a range of tecnologies ensures you get the most optimized solution.</p>
+                            <p>From Financial Management, Flight Scheduling, and IoT to a list of other software systems in Java, Python, JavaScript, and Clojure, we are comfortable working across different stacks and cloud providers. Our experience with a range of tecnologies ensures you get the most optimized solution.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="content-section bg-white">
+        <section id="team" class="content-section bg-white">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6" style="text-align: right;">
-                        <h1>Still not convinced?</h1>
-                        <h4>check out my public projects.</h4>
-                    </div>
-                    <div class="col-lg-6 text-center">
-                        <img src="/assets/img/coffee-bar.png" style="margin-top: -2rem;" height="135px"/>
+                    <div class="col-lg-6" style="width:100%; text-align:center">
+                        <h1>Meet Our Team</h1>
                     </div>
                 </div>
-                <div class="row mt-5">
-                    <div class="col-lg-4">
-                        <div class="card">
-                            <img class="card-img-top" src="/assets/img/the-commons-app.png" alt="The Commons App">
-                            <div class="card-body">
-                                <h5 class="card-title"><a href="https://www.thecommonsapp.com" target="_blank">The Commons App</a></h5>
-                                <p class="card-text">Built in React with a Node backend, this SPA allows users to review and discuss articles from newspapers and magazines they love.</p>
+                <div class="row mt-5" style="justify-content: space-evenly;">
+                    <div class="col-lg-6">
+                        <div class="card" style="flex-direction:row; border:0;">
+                            <div class="col-md-5">
+                                <img class="img-fluid rounded-circle" src="/assets/img/jon-profile.png" alt="">
+                            </div>
+                            <div class="col-md-7">
+                                <div class="card-body">
+                                    <h5 class="card-title">Jonathan Duelfer</h5>
+                                    <h6 class="card-title">CEO, Lead Developer</h6>
+                                    <p class="card-text">Fusce auctor nisl sit amet iaculis volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc volutpat, enim ut tristique laoreet, urna dolor placerat enim, eu interdum tellus est a massa. Donec quis fermentum lectus. Suspendisse nec nisl vitae metus elementum volutpat. Fusce non fringilla elit.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card">
-                            <img class="card-img-top" src="/assets/img/sfdx-developer.png" alt="The Commons App">
-                            <div class="card-body">
-                                <h5 class="card-title"><a href="http://sfdxdeveloper.com" target="_blank">SFDX Developer</a></h5>
-                                <p class="card-text">Blog that lists tutorials and best practices for working with Salesforce, primarly with SFDX and other cutting-edge tools.</p>
+                    <div class="col-lg-6">
+                        <div class="card" style="flex-direction:row; border:0;">
+                            <div class="col-md-5">
+                                <img class="img-fluid rounded-circle" src="/assets/img/tamara-profile.jpeg" alt="">
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="card">
-                            <img class="card-img-top" src="/assets/img/inquiring-reader.png" alt="The Commons App">
-                            <div class="card-body">
-                                <h5 class="card-title"><a href="https://inquiringreader.org" target="_blank">The Inquiring Reader</a></h5>
-                                <p class="card-text">Static blog that is highly optimized for SEO and recieves ~2,000 visits per month, a worthy visit count for a book-based website.</p>
+                            <div class="col-md-7">
+                                <div class="card-body">
+                                    <h5 class="card-title">Tamara Chance</h5>
+                                    <h6 class="card-title">Software Developer</h6>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquam neque vitae quam rutrum, a consectetur mauris pellentesque. Fusce malesuada condimentum nisi, sit amet tincidunt eros tincidunt at. Phasellus id purus eu felis sollicitudin lobortis in at neque. Nullam volutpat dapibus felis, vel placerat est vestibulum vitae. Vivamus lobortis ligula vitae tempor malesuada. </p>
+                                </div>
                             </div>
                         </div>
                     </div>
