Removed the personal projects and added the team section there with profile pics. No bios yet; Updated the services section to be more Salesforce specific; Added more inclusive language; Added anchor links to the nav bar and a link to the sfdx developer blog.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow: 0;">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end"> 
+                    <li><a class="nav-link me-3" href="#about-us" style="text-decoration: none; color: #fff;">About Us</a></li>
+                    <li><a class="nav-link me-3" href="#services" style="text-decoration: none; color: #fff;">Our Services</a></li>
+                    <li><a class="nav-link me-3" href="#team" style="text-decoration: none; color: #fff;">Our Team</a></li>
+                    <li><a class="nav-link me-3" href="http://www.sfdxdeveloper.com" target="_blank" style="text-decoration: none; color: #fff;">Blog</a></li>
                 </ul>
               </div>
             </div>
