Commented out the Blog navigation link while the blog is still under construction

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a class="nav-link me-3" href="#about-us" style="text-decoration: none; color: #fff;">About Us</a></li>
                     <li><a class="nav-link me-3" href="#services" style="text-decoration: none; color: #fff;">Our Services</a></li>
                     <li><a class="nav-link me-3" href="#team" style="text-decoration: none; color: #fff;">Our Team</a></li>
-                    <li><a class="nav-link me-3" href="http://www.sfdxdeveloper.com" target="_blank" style="text-decoration: none; color: #fff;">Blog</a></li>
+                    <!-- <li><a class="nav-link me-3" href="http://www.sfdxdeveloper.com" target="_blank" style="text-decoration: none; color: #fff;">Blog</a></li> -->
                 </ul>
               </div>
             </div>
