--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="col-lg-6" style="text-align:right;">
                         <h1 class="mb-1">Complex problems</h1>
                         <h3 class="mb-3">simple solutions.</h3>
-                        <a class="btn btn-dark" href="mailto:jon@duelfersolutions.com">Request a Consultation</a>
+                        <a class="btn btn-dark" href="mailto:jon@duelfersolutions.com">Talk to Our Experts</a>
                     </div>
                     <div class="col-lg-6 text-center">
                         <img src="/assets/img/little-things-me.png" height="250px"/>
