Updated our title and bio sections to remove the lorem ipsum placeholder text

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                             <div class="col-md-7">
                                 <div class="card-body">
                                     <h5 class="card-title">Jonathan Duelfer</h5>
-                                    <h6 class="card-title">CEO, Lead Developer</h6>
-                                    <p class="card-text">Fusce auctor nisl sit amet iaculis volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc volutpat, enim ut tristique laoreet, urna dolor placerat enim, eu interdum tellus est a massa. Donec quis fermentum lectus. Suspendisse nec nisl vitae metus elementum volutpat. Fusce non fringilla elit.</p>
+                                    <h6 class="card-title">CEO, Technical Architect</h6>
+                                    <p class="card-text">With nearly a decade of experience spanning various industries such as private aviation, fin-tech, and the energy sector and over 7 years of hands-on experience, ranging from building Salesforce Orgs from scratch to collaborating within large development teams, he has successfully tackled projects of all sizes and complexities. Whether it's developing independent tools or seamlessly integrating with existing development teams, he brings a wealth of consulting expertise.</p>
                                 </div>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Tamara Chance</h5>
                                     <h6 class="card-title">Software Developer</h6>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquam neque vitae quam rutrum, a consectetur mauris pellentesque. Fusce malesuada condimentum nisi, sit amet tincidunt eros tincidunt at. Phasellus id purus eu felis sollicitudin lobortis in at neque. Nullam volutpat dapibus felis, vel placerat est vestibulum vitae. Vivamus lobortis ligula vitae tempor malesuada. </p>
+                                    <p class="card-text">As a 6x certified Salesforce developer and full-stack web developer, she has a diverse range of experience across multiple Salesforce domains. Her broad skillset enables her to bridge the gap between Salesforce customization and robust web development. She has a passion for continuous-learning and delivering cutting-edge solutions to drive business success while leveraging the full capabilities of the Salesforce platform.</p>
                                 </div>
                             </div>
                         </div>
