Change my (jon's) profile pic to a more recent one and update title

--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
                     <div class="col-lg-6">
                         <div class="card" style="flex-direction:row; border:0;">
                             <div class="col-md-5">
-                                <img class="img-fluid rounded-circle" src="/assets/img/jon-profile.png" alt="">
+                                <img class="img-fluid rounded-circle" src="/assets/img/jon-profile.jpg" alt="">
                             </div>
                             <div class="col-md-7">
                                 <div class="card-body">
                                     <h5 class="card-title">Jonathan Duelfer</h5>
-                                    <h6 class="card-title">CEO, Technical Architect</h6>
+                                    <h6 class="card-title">CEO, Application Architect</h6>
                                     <p class="card-text">With nearly a decade of experience spanning various industries such as private aviation, fin-tech, and the energy sector and over 7 years of hands-on experience, ranging from building Salesforce Orgs from scratch to collaborating within large development teams, he has successfully tackled projects of all sizes and complexities. Whether it's developing independent tools or seamlessly integrating with existing development teams, he brings a wealth of consulting expertise.</p>
                                 </div>
                             </div>
@@ -148,7 +148,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
-                        <p>&#169; 2021 Duelfer Solutions, L.L.C. All Rights Reserved.</p>
+                        <p>&#169; 2023 Duelfer Solutions, L.L.C. All Rights Reserved.</p>
                     </div>
                     <div class="col-lg-6 col-md-12 footer-email">
                         <p>jon@duelfersolutions.com</p>
