--- a/blog.html
+++ b/blog.html
@@ -38,15 +38,11 @@ permalink: /blog/
     .card-featured-image {
       width: 100%;
       height: 100%;
-      object-fit: fill;
-    @media screen and (max-width: 720px) {
-      .feed .post-card {
-        grid-template-columns: 1fr;
-      }
-      .feed .post-card .card-featured-image {
-        object-fit: cover;
-      }
-    }
+      object-fit: cover; } }
+      @media screen and (max-width: 720px) {
+        .feed .post-card {
+          grid-template-columns: 1fr;
+        } }
 </style>
 
 <div class="blog-home">
