--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <img src="/assets/img/pebble-people.png" height="150px"/>
                     </div>
                     <div class="col-lg-8 mx-auto col-sm-6">
-                        <h2>Agilility. Integrity. Excellence.</h2>
+                        <h2>Agility. Integrity. Excellence.</h2>
                         <p class="lead mb-3">With over 10 years of experience in the Salesforce ecosystem, our mission is to be a trusted partner on our clients’ journey to Salesforce success. Our team of experts brings a level of excellence that you can trust.</p> 
                         <p class="lead mb-3">We’re committed to delivering top-quality services, innovative solutions, and exceptional customer satisfaction. We'll work collaboratively with you, utilizing agile methodologies to adapt quickly to your evolving business needs and provide flexible solutions tailored to your unique requirements.</p>
                     </div>
@@ -78,7 +78,7 @@
                     <div class="col-lg-4">
                         <div class="text-center">
                             <img height="150px" src="/assets/img/humans-graph.png" alt="Salesforce">
-                            <h3 class="pt-1">Mulit-cloud Salesforce Implementations</h3>
+                            <h3 class="pt-1">Multi-cloud Salesforce Implementations</h3>
                         </div>
                         <div class="service-text px-3">
                             <p>We have successfully worked with a wide range of clouds, including Sales Cloud, Service Cloud, Net Zero Cloud, NPSP (Nonprofit Success Pack), and Marketing Cloud. Our experience spans across these clouds, enabling us to deliver comprehensive solutions that address your sales, service, sustainability, nonprofit, and marketing needs.</p>
