adds profile pic and bio

--- a/index.html
+++ b/index.html
@@ -141,6 +141,20 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-6">
+                        <div class="card" style="flex-direction:row; border:0;">
+                            <div class="col-md-5">
+                                <img class="img-fluid rounded-circle" src="/assets/img/caitlin-profile.jpg" alt="">
+                            </div>
+                            <div class="col-md-7">
+                                <div class="card-body">
+                                    <h5 class="card-title">Caitlin Sullivan</h5>
+                                    <h6 class="card-title">Software Developer</h6>
+                                    <p class="card-text">With a Masters in Mathematics, Caitlin brings a unique analytical perspective to problem-solving in software development. She is a recently certified Salesforce Platform Developer with three years of CRM experience and a passion for tackling new challenges with creative solutions.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
