--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="row mt-5" style="justify-content: space-evenly">
                     <div class="col-lg-6">
                         <div class="card" style="flex-direction:row; border:0;">
                             <div class="col-md-5">
