About us appears as two columns on large screens but otherwise the row stacks on smaller screens.

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <section id="about-us" class="content-section-after-skew bg-white">
             <div class="container text-center">
                 <div class="row">
-                    <div class="col-lg-4 col-sm-6">
+                    <div class="col-lg-4">
                         <img src="/assets/img/pebble-people.png" height="150px"/>
                     </div>
-                    <div class="col-lg-8 mx-auto col-sm-6">
+                    <div class="col-lg-8 mx-auto">
                         <h2>Agility. Integrity. Excellence.</h2>
                         <p class="lead mb-3">With over 10 years of experience in the Salesforce ecosystem, our mission is to be a trusted partner on our clients’ journey to Salesforce success. Our team of experts brings a level of excellence that you can trust.</p> 
                         <p class="lead mb-3">We’re committed to delivering top-quality services, innovative solutions, and exceptional customer satisfaction. We'll work collaboratively with you, utilizing agile methodologies to adapt quickly to your evolving business needs and provide flexible solutions tailored to your unique requirements.</p>
