Moves the margin to the top of each column (team member) so that there's margin between them; wraps the columns so they stack on small screen sizes.

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
                         <h1>Meet Our Team</h1>
                     </div>
                 </div>
-                <div class="row mt-5" style="justify-content: space-evenly;">
-                    <div class="col-lg-6">
-                        <div class="card" style="flex-direction:row; border:0;">
+                <div class="row" style="justify-content: space-evenly;">
+                    <div class="mt-5 col-lg-6">
+                        <div class="card" style="flex-direction:row; flex-wrap:wrap; border:0;">
                             <div class="col-md-5">
                                 <img class="img-fluid rounded-circle" src="/assets/img/jon-profile.jpg" alt="">
                             </div>
@@ -127,8 +127,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="card" style="flex-direction:row; border:0;">
+                    <div class="mt-5 col-lg-6">
+                        <div class="card" style="flex-direction:row; flex-wrap:wrap; border:0;">
                             <div class="col-md-5">
                                 <img class="img-fluid rounded-circle" src="/assets/img/tamara-profile.jpeg" alt="">
                             </div>
@@ -141,10 +141,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row mt-5" style="justify-content: space-evenly">
-                    <div class="col-lg-6">
-                        <div class="card" style="flex-direction:row; border:0;">
+                    <div class="mt-5 col-lg-6">
+                        <div class="card" style="flex-direction:row; flex-wrap:wrap; border:0;">
                             <div class="col-md-5">
                                 <img class="img-fluid rounded-circle" src="/assets/img/caitlin-profile.jpg" alt="">
                             </div>
