--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6" style="text-align:right;">
-                        <h1 class="mb-1">Complex problems</h1>
-                        <h3 class="mb-3">simple solutions.</h3>
+                        <h1 class="mb-1">Complex Problems</h1>
+                        <h3 class="mb-3">Simple Solutions</h3>
                         <a class="btn btn-dark" href="mailto:jon@duelfersolutions.com">Talk to Our Experts</a>
                     </div>
                     <div class="col-lg-6 text-center">
@@ -78,7 +78,7 @@
                     <div class="col-lg-4">
                         <div class="text-center">
                             <img height="150px" src="/assets/img/humans-graph.png" alt="Salesforce">
-                            <h3 class="pt-1">Multi-cloud Salesforce Implementations</h3>
+                            <h3 class="pt-1">Multi-Cloud Salesforce Implementations</h3>
                         </div>
                         <div class="service-text px-3">
                             <p>We have successfully worked with a wide range of clouds, including Sales Cloud, Service Cloud, Net Zero Cloud, NPSP (Nonprofit Success Pack), and Marketing Cloud. Our experience spans across these clouds, enabling us to deliver comprehensive solutions that address your sales, service, sustainability, nonprofit, and marketing needs.</p>
@@ -87,7 +87,7 @@
                     <div class="col-lg-4">
                         <div class="text-center" style="padding-bottom: 2rem;">
                             <img height="150px" src="/assets/img/pebble-people-ui.png" alt="Salesforce">
-                            <h3 class="pt-1">Source-driven Solutions</h3>
+                            <h3 class="pt-1">Source-Driven Solutions</h3>
                         </div>
                         <div class="service-text px-3">
                             <p>With our source-driven approach, you can have peace of mind knowing that your Salesforce org is protected, and changes can be implemented smoothly while maintaining the highest level of data integrity and governance. Our experienced team utilizes version control systems and best practices to maintain a comprehensive history of changes, allowing for efficient collaboration, seamless code management, and streamlined deployments.</p>
