adds styling to keep headers and paragraphs horizontally aligned when window size changes

--- a/index.html
+++ b/index.html
@@ -76,29 +76,29 @@
             <div class="container">
                 <div class="row pt-5">
                     <div class="col-lg-4">
-                        <div class="text-center">
-                            <img height="150px" src="/assets/img/humans-graph.png" alt="Salesforce">
+                        <img class="responsive" src="/assets/img/humans-graph.png" alt="Salesforce"> 
+                        <div class="row service-header">
                             <h3 class="pt-1">Multi-Cloud Salesforce Implementations</h3>
                         </div>
-                        <div class="service-text px-3">
+                        <div class="row service-text px-3">
                             <p>We have successfully worked with a wide range of clouds, including Sales Cloud, Service Cloud, Net Zero Cloud, NPSP (Nonprofit Success Pack), and Marketing Cloud. Our experience spans across these clouds, enabling us to deliver comprehensive solutions that address your sales, service, sustainability, nonprofit, and marketing needs.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="text-center" style="padding-bottom: 2rem;">
-                            <img height="150px" src="/assets/img/pebble-people-ui.png" alt="Salesforce">
+                        <img class="responsive" src="/assets/img/pebble-people-ui.png" alt="Salesforce">          
+                        <div class="row service-header">
                             <h3 class="pt-1">Source-Driven Solutions</h3>
                         </div>
-                        <div class="service-text px-3">
+                        <div class="row service-text px-3">
                             <p>With our source-driven approach, you can have peace of mind knowing that your Salesforce org is protected, and changes can be implemented smoothly while maintaining the highest level of data integrity and governance. Our experienced team utilizes version control systems and best practices to maintain a comprehensive history of changes, allowing for efficient collaboration, seamless code management, and streamlined deployments.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="text-center">
-                            <img height="150px" src="/assets/img/humans-ux.png" alt="Salesforce">
+                        <img class="responsive" src="/assets/img/humans-ux.png" alt="Salesforce">
+                        <div class="row service-header">
                             <h3 class="pt-1">Customized Platform Integrations</h3>
                         </div>
-                        <div class="service-text px-3">
+                        <div class="row service-text px-3">
                             <p>From Financial Management, Flight Scheduling, and IoT to a list of other software systems in Java, Python, JavaScript, and Clojure, we are comfortable working across different stacks and cloud providers. Our experience with a range of tecnologies ensures you get the most optimized solution.</p>
                         </div>
                     </div>
