--- a/index.html
+++ b/index.html
@@ -110,6 +110,88 @@ permalink: /
 </div>
 </section>
 
+<!-- Certs (Carousel) -->
+<section class="container pb-4 pb-lg-5 mb-3">
+  <div class="swiper mx-n2" data-swiper-options='{
+    "slidesPerView": 2,
+    "autoplay": {
+      "delay": 3000
+    },
+    "navigation": {
+      "prevEl": "#prev-brand",
+      "nextEl": "#next-brand"
+    },
+    "loop": true,
+    "pagination": {
+      "el": ".swiper-pagination",
+      "clickable": true
+    },
+    "breakpoints": {
+      "500": {
+        "slidesPerView": 3,
+        "spaceBetween": 8
+      },
+      "650": {
+        "slidesPerView": 3,
+        "spaceBetween": 8
+      },
+      "900": {
+        "slidesPerView": 4,
+        "spaceBetween": 8
+      },
+      "1100": {
+        "slidesPerView": 5,
+        "spaceBetween": 8
+      }
+    }
+  }'>
+    <div class="swiper-wrapper">
+      <div class="swiper-slide py-3">
+        <div class="card card-body card-hover px-2 mx-2">
+          <img src="assets/img/certs/application-architect.png" class="d-block mx-auto my-2" width="140" alt="application architect">
+        </div>
+      </div>
+      <div class="swiper-slide py-3">
+        <div class="card card-body card-hover px-2 mx-2">
+          <img src="assets/img/certs/data-architect.png" class="d-block mx-auto my-2" width="140" alt="data architect">
+        </div>
+      </div>
+      <div class="swiper-slide py-3">
+        <div class="card card-body card-hover px-2 mx-2">
+          <img src="assets/img/certs/developer-2.png" class="d-block mx-auto my-2" width="140" alt="developer 2">
+        </div>
+      </div>
+      <div class="swiper-slide py-3">
+        <div class="card card-body card-hover px-2 mx-2">
+          <img src="assets/img/certs/developer-1.png" class="d-block mx-auto my-2" width="140" alt="developer 1">
+        </div>
+      </div>
+      <div class="swiper-slide py-3">
+        <div class="card card-body card-hover px-2 mx-2">
+          <img src="assets/img/certs/sales-cloud-consultant.png" class="d-block mx-auto my-2" width="140" alt="sales cloud consultant">
+        </div>
+      </div>
+      <div class="swiper-slide py-3">
+        <div class="card card-body card-hover px-2 mx-2">
+          <img src="assets/img/certs/admin.png" class="d-block mx-auto my-2" width="140" alt="admin">
+        </div>
+      </div>
+      <div class="swiper-slide py-3">
+        <div class="card card-body card-hover px-2 mx-2">
+          <img src="assets/img/certs/app-builder.png" class="d-block mx-auto my-2" width="140" alt="app builder">
+        </div>
+      </div>
+      <div class="swiper-slide py-3">
+        <div class="card card-body card-hover px-2 mx-2">
+          <img src="assets/img/certs/visibility-architect.png" class="d-block mx-auto my-2" width="140" alt="visibility architect">
+        </div>
+      </div>
+
+    <!-- Pagination (bullets) -->
+    <div class="swiper-pagination position-relative pt-3 mt-4 d-md-none d-flex"></div>
+  </div>
+</section>
+
 <!-- Blog + Contact cta -->
 <div class="bg-secondary mb-5 pt-5">
 
